Update publisher name in JSON

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A theme that has a dark blue background and easy to read keywords",
   "version": "0.0.3",
   "repository": {"url": "https://github.com/Lamperr/NeoInked"},
-  "publisher": "Nathan Lamp",
+  "publisher": "nlamp",
   "icon": "images/file_logo_128x128.png",
   "engines": {
     "vscode": "^1.70.0"
