--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "engines": {
     "vscode": "^1.65.0"
   },
-  "keywords": ["Dark, neoinked, blue, inked, theme"],
+  "keywords": ["Dark, neoinked, ink, inked, theme"],
   "categories": [
     "Themes"
   ],
